--- a/miniprogram/pages/checkstudent/checkstudent.wxss
+++ b/miniprogram/pages/checkstudent/checkstudent.wxss
@@ -1,1 +1,63 @@
 /* pages/checkstudent/checkstudent.wxss */
+.user-item {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border-bottom: 1px solid #eee;
+  /* 添加底部分隔线 */
+}
+
+.user-image {
+  width: 80px;
+  /* 设置图片宽度 */
+  height: 80px;
+  /* 设置图片高度 */
+  margin-right: 10px;
+  /* 图片与文本之间的间距 */
+}
+
+.user-info {
+  flex: 1;
+  /* 文本信息占据剩余空间 */
+}
+
+.user-username {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 5px;
+  /* 床源标题与其他信息之间的间距 */
+
+  display: inline-block;
+  /* 设置为内联块元素，使标题与图片上方平行 */
+  vertical-align: middle;
+  /* 垂直居中对齐 */
+}
+
+.user-university {
+  font-size: 10px;
+  color: #666;
+}
+
+.user-password {
+  font-size: 10px;
+  color: #666;
+}
+
+.user-student {
+  font-size: 10px;
+  color: #666;
+}
+
+.button1 {
+  font-size: 15px;
+  background-color: rgb(207, 120, 120);
+  margin-right: 10px;
+  /* 可根据需要调整按钮之间的间距 */
+}
+
+.button2 {
+  font-size: 15px;
+  background-color: rgb(213, 228, 193);
+  margin-right: 10px;
+  /* 可根据需要调整按钮之间的间距 */
+}
